--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 asgiref==3.7.2
 Django==4.2.3
+django-debug-toolbar==4.1.0
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+PyJWT==2.7.0
 python-dotenv==1.0.0
+pytz==2023.3
 sqlparse==0.4.4
 typing_extensions==4.7.1
