--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 asgiref==3.7.2
+certifi==2023.5.7
+charset-normalizer==3.2.0
 Django==4.2.3
 django-debug-toolbar==4.1.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+idna==3.4
 PyJWT==2.7.0
 python-dotenv==1.0.0
 pytz==2023.3
+requests==2.31.0
 sqlparse==0.4.4
+stripe==5.4.0
 typing_extensions==4.7.1
+urllib3==2.0.3
