--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-q==1.3.9
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 idna==3.4
+psycopg2-binary==2.9.6
 PyJWT==2.7.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
