--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 arrow==1.2.3
 asgiref==3.7.2
+attrs==23.1.0
 blessed==1.20.0
 certifi==2023.5.7
 charset-normalizer==3.2.0
@@ -9,17 +10,25 @@ django-picklefield==3.1
 django-q==1.3.9
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+drf-spectacular==0.26.3
 idna==3.4
+inflection==0.5.1
+jsonschema==4.18.2
+jsonschema-specifications==2023.6.1
 psycopg2-binary==2.9.6
 PyJWT==2.7.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
+PyYAML==6.0
 redis==3.5.3
+referencing==0.29.1
 requests==2.31.0
+rpds-py==0.8.10
 six==1.16.0
 sqlparse==0.4.4
 stripe==5.4.0
 typing_extensions==4.7.1
+uritemplate==4.1.1
 urllib3==2.0.3
 wcwidth==0.2.6
