--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,3 +42,17 @@ services:
       - db
       - redis
       - app
+
+  shell:
+    container_name: shell
+    build:
+      context: .
+    command: |
+      python manage.py shell &&
+      from borrowing import tasks
+    volumes:
+      - ./:/app
+    env_file:
+      - .env
+    depends_on:
+      - app
