add DEBUG to .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,4 @@ POSTGRES_DB=<YOUR DB NAME>
 POSTGRES_USER=<YOUR DB USER>
 POSTGRES_PASSWORD=<YOUR DB PASSWORD>
 POSTGRES_HOST=<YOUR DB HOST>
+DEBUG = True
