--- a/.env.sample
+++ b/.env.sample
@@ -2,8 +2,8 @@ SECRET_KEY=<YOUR DJANGO SECRET KEY>
 TELEGRAM_BOT_TOKEN=<YOUR TELEGRAM BOT TOKEN>
 TELEGRAM_CHAT_ID=<YOUR TELEGRAM CHAT ID>
 STRIPE_API_KEY=<YOUR STRIPE API KEY>
-POSTGRES_DB=<YOUR DB NAME>
-POSTGRES_USER=<YOUR DB USER>
+POSTGRES_HOST=db
+POSTGRES_DB=postgres
+POSTGRES_USER=postgres
 POSTGRES_PASSWORD=<YOUR DB PASSWORD>
-POSTGRES_HOST=<YOUR DB HOST>
 DEBUG = True
